// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator component recieves className 1`] = `
<div
  className="sc-gZMcBi cwfHym TEST_CLASS"
>
  TEST
</div>
`;

exports[`Separator component renders children 1`] = `
<div
  className="sc-gZMcBi cwfHym"
>
  TEST
</div>
`;
